--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -42,29 +42,24 @@ span:hover {
   color: aquamarine;
 }
 
-/* Estilizar a barra de rolagem */
 ::-webkit-scrollbar {
-  width: 8px; /* Largura da barra de rolagem */
+  width: 8px;
 }
 
-/* Estilizar o fundo da barra de rolagem */
 ::-webkit-scrollbar-track {
-  background: #2c2c2c; /* Cor de fundo da barra */
-  border-radius: 10px; /* Bordas arredondadas */
+  background: #2c2c2c;
+  border-radius: 10px;
 }
 
-/* Estilizar o "thumb" da barra de rolagem (parte que se move) */
 ::-webkit-scrollbar-thumb {
-  background-color: #5a5a5a; /* Cor do "thumb" */
-  border-radius: 10px; /* Bordas arredondadas */
+  background-color: #5a5a5a;
+  border-radius: 10px;
 }
 
-/* Estilizar a parte do "thumb" quando o mouse está sobre ele */
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #888; /* Cor do "thumb" ao passar o mouse */
+  background-color: #888;
 }
 
-/* Estilizar a extremidade inferior da barra de rolagem (flecha) */
 ::-webkit-scrollbar-button:increment {
   background: #2c2c2c;
   height: 10px;
@@ -74,3 +69,4 @@ span:hover {
   background: #2c2c2c;
   height: 10px;
 }
+
